--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@eth-optimism/smock": "^1.1.10",
     "@nomiclabs/ethereumjs-vm": "^4.2.2",
     "@nomiclabs/hardhat-etherscan": "^3.0.3",
+    "@nomicfoundation/hardhat-verify": "^1.0.4",
     "@opengsn/gsn": "^2.1.0",
     "@openzeppelin/contracts-ethereum-package": "^3.0.0",
     "@openzeppelin/test-helpers": "^0.5.15",
