--- a/package.json
+++ b/package.json
@@ -26,44 +26,43 @@
   },
   "devDependencies": {
     "@matterlabs/hardhat-zksync-deploy": "^0.6.3",
-    "@matterlabs/hardhat-zksync-solc": "^0.3.14",
-    "@nomiclabs/hardhat-ethers": "^2.0.5",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@typechain/ethers-v5": "^7.0.1",
-    "@types/chai": "^4.2.21",
-    "@types/mocha": "^9.0.0",
-    "@types/node": "^16.6.0",
-    "chai": "^4.3.4",
-    "ethereum-waffle": "^3.4.0",
+    "@matterlabs/hardhat-zksync-solc": "^0.4.1",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
+    "@typechain/ethers-v5": "^11.1.1",
+    "@types/chai": "^4.3.5",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^20.4.5",
+    "chai": "^4.3.7",
+    "ethereum-waffle": "^4.0.10",
     "ethers": "^5.7.2",
-    "hardhat": "^2.13.0",
-    "hardhat-contract-sizer": "^2.0.3",
-    "hardhat-deploy": "^0.8.11",
-    "hardhat-gas-reporter": "^1.0.4",
-    "husky": "^7.0.1",
-    "prettier": "^2.3.2",
-    "prettier-plugin-solidity": "^1.0.0-beta.17",
-    "solhint-plugin-prettier": "0.0.5",
-    "solidity-coverage": "^0.7.16",
+    "hardhat": "^2.17.0",
+    "hardhat-contract-sizer": "^2.10.0",
+    "hardhat-deploy": "^0.11.34",
+    "hardhat-gas-reporter": "^1.0.9",
+    "husky": "^8.0.3",
+    "prettier": "^3.0.0",
+    "prettier-plugin-solidity": "^1.1.3",
+    "solhint-plugin-prettier": "^0.0.5",
+    "solidity-coverage": "^0.8.4",
     "ts-node": "^10.9.1",
-    "typechain": "^5.1.2",
-    "typescript": "^5.0.2",
-    "zksync-web3": "^0.13.1"
+    "typechain": "^8.3.1",
+    "typescript": "^5.1.6",
+    "zksync-web3": "^0.14.3"
   },
   "dependencies": {
     "@api3/airnode-protocol-v1": "^0.5.1",
     "@eth-optimism/smock": "^1.1.10",
-    "@nomiclabs/ethereumjs-vm": "^4.2.2",
-    "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@nomicfoundation/hardhat-verify": "^1.0.4",
-    "@opengsn/gsn": "^2.1.0",
+    "@nomiclabs/ethereumjs-vm": "^4.2.2",
+    "@opengsn/provider": "^3.0.0-beta.6",
     "@openzeppelin/contracts-ethereum-package": "^3.0.0",
-    "@openzeppelin/test-helpers": "^0.5.15",
-    "@typechain/hardhat": "^2.3.0",
-    "dotenv": "^16.0.0",
-    "prb-math": "1.0.3",
-    "solhint": "^3.3.6",
-    "solidity-bytes-utils": "0.1.2",
+    "@openzeppelin/test-helpers": "^0.5.16",
+    "@typechain/hardhat": "^8.0.3",
+    "dotenv": "^16.3.1",
+    "prb-math": "^2.4.3",
+    "solhint": "^3.4.1",
+    "solidity-bytes-utils": "^0.8.0",
     "ts-generator": "^0.1.1"
   },
   "homepage": "https://github.com/WIM3/hardhat-framework#readme",
