--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "hardhat-deploy": "^0.11.34",
     "hardhat-gas-reporter": "^1.0.9",
     "husky": "^8.0.3",
-    "prettier": "^3.0.0",
-    "prettier-plugin-solidity": "^1.1.3",
+    "prettier": "^2.3.2",
+    "prettier-plugin-solidity": "^1.0.0-beta.17",
     "solhint-plugin-prettier": "^0.0.5",
     "solidity-coverage": "^0.8.4",
     "ts-node": "^10.9.1",
