--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - name: Tests
+        env:
+            ETHERSCAN_API_KEY: ${{ secrets.ETHERSCAN_API_KEY }}           
+            MNEMONIC: ${{ secrets.MNEMONIC }} 
         run: |
           yarn
           yarn run prettier:solidity
